# tidyupvisionpipeline

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh  run_evaluation.sh  run_evaluation.txt
change_detection/: CMakeLists.txt  README
change_detection/include/: change_detection.h  color_histogram.h  detected_object.h  extract_objects_using_semantics.h  local_object_verification.h  mathhelpers.h  object_matching.h  object_visualization.h  plane_object_extraction.h  region_growing.h  scene_differencing_points.h  settings.h  warp_point_rigid_4d.h
change_detection/include/boost_graph/: maximum_weighted_matching.hpp
change_detection/src/: all_scenes_comparison.cpp  all_scenes_comparison_matching_only.cpp  change_detection.cpp  color_histogram.cpp  extract_objects_using_semantics.cpp  local_object_verification.cpp  object_matching.cpp  object_matching.cpp.autosave  object_visualization.cpp  plane_object_extraction.cpp  scene_differencing_points.cpp  test_change_detection.cpp  test_hull.cpp
evaluation/: CMakeLists.txt
evaluation/src/: evaluation.cpp  fromDStoOrig.cpp
misc_tests/src/: convex_hull_pts_test.cpp
v4r_ppf/: CMakeLists.txt  README.md
v4r_ppf/cfg/: ppf_pose_estimation_config.ini
v4r_ppf/include/: PPFRecognizer.h  PPFRecognizerParameter.h  ppf_recognition_pipeline.h
v4r_ppf/include/ppf/: correspondence_finder.h  local_coordinate.h  model_search.h
v4r_ppf/include/ppf/impl/: correspondence_finder.hpp
v4r_ppf/include/v4r/recognition/: hypotheses_verification_param.h
v4r_ppf/src/: PPFRecognizer.cpp  PPFRecognizerParameter.cpp  ppf_python_bindings.cpp  ppf_recognition_pipeline.cpp  test_ppf_recognizer.cpp
v4r_ppf/src/ppf/: hough_voting.cpp  model_search.cpp
v4r_ppf/src/v4r/geometry/: normals.cpp
v4r_ppf/src/v4r/recognition/: model.cpp
